Align all apps with latest Cairim

--- a/app/003_visual_traceroute_scene/CMakeLists.txt
+++ b/app/003_visual_traceroute_scene/CMakeLists.txt
@@ -23,6 +23,8 @@ target_link_libraries(${PROJECT_NAME}
   ${XLIB_LIBRARIES}
   ${RSVG_LIBRARIES}
   ${CARES_LIBRARIES}
+  pthread
+  png
 )
 
 target_include_directories(${PROJECT_NAME}
